# ugo-os

./: .gitignore  Cargo.toml  Makefile  build  build.bat  build.py  rust-toolchain.toml
bootloader/: Cargo.toml  memmap.txt
bootloader/.cargo/: config.toml
bootloader/src/: addr.rs  boot_info.rs  frame.rs  fs.rs  graphics.rs  loader.rs  logger.rs  main.rs  mappings.rs  mem.rs  page.rs
bootloader/src/mem/: frame.rs  mem_map.rs  mod.rs  valloc.rs
buildscript/: build.py
common/src/: addr.rs  lib.rs  page.rs  slab.rs
kernel/: Cargo.toml  build.rs  kernel.json
kernel/.cargo/: config.toml
kernel/src/: framebuffer.rs  kprintln.rs  main.rs  sync.rs
kernel/src/arch/: flags.rs  gdt.rs  idt.rs  io_port.rs  mod.rs
kernel/src/arch/interrupts/: handler.rs  idt.rs  mod.rs  pic.rs
kernel/src/kmem/: heap.rs  mod.rs  page.rs  phys.rs
kernel/src/kmem/ll_heap/: freelist.rs  mod.rs
src/: main.rs
