# Stop rust-analyzer from complaining about us missing the `test` crate
[[bin]]
name= "bootloader"
path = "src/main.rs"
test = false
bench = false

[package]
name = "ugo-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.18.0"
font8x8 = { version = "0.3", default-features = false }
xmas-elf = "0.8.0"
conquer-once = { version = "0.3.2", default-features = false }
spin = "0.9.4"
common = { path = "../common" }
