[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
noto-sans-mono-bitmap = "0.2.0"

[build-dependencies]
common = { path = "../common" }
